--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Stadia Timer</title>
   </head>
-  <body onload="getDeets()">    
+  <body onload="deetGrabber()">    
     <h1><span id="minutes"></span> minutes and <span id="seconds"></span> seconds till shutdown....</h1>
   </body>
   <script>
@@ -14,7 +14,6 @@
         var secondsLeft = 0;
         xhttp.onreadystatechange = function() {
           if (this.readyState == 4 && this.status == 200) {
-            console.log("oi");
             console.log(this.responseText);
             secondsLeft = this.responseText;
 
@@ -28,6 +27,10 @@
         var api = location.href + "/api";
         xhttp.open("GET", api, true);
         xhttp.send();
+      }
+
+      function deetGrabber() {
+        setInterval(getDeets,1000);
       }
   </script>
 </html>
